--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 streamlit
-hashlib
-binascii
-pillow
-io
-struct
-json
-os
-datetime
+streamlit-ace
+pymongo
+python-dotenv
+Pillow
 requests
-time
 piexif
+numpy
+opencv-python
+scikit-learn
+matplotlib
+plotly
