--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-streamlit
-streamlit-ace
-pymongo
-dotenv
-Pillow
-piexif
-folium
-streamlit-folium
-numpy
-pandas
-seaborn
-opencv-python
-scikit-learn
-matplotlib
-plotly
-scipy
-scikit-image
+streamlit>=1.28.0
+streamlit-ace>=0.1.1
+pymongo>=4.3.3
+python-dotenv>=1.0.0
+Pillow>=10.0.0
+requests>=2.31.0
+piexif>=1.1.3
+folium>=0.14.0
+streamlit-folium>=0.13.0
+numpy>=1.24.0
+pandas>=2.0.0
+seaborn>=0.12.0
+opencv-python>=4.8.0
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
+plotly>=5.15.0
+scipy>=1.11.0
+scikit-image>=0.21.0
