--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-streamlit>=1.29.0
-streamlit-ace>=0.1.1
-pymongo>=4.6.0
-python-dotenv>=1.0.0
-Pillow>=10.2.0
-requests>=2.31.0
-piexif>=1.1.3
-folium>=0.15.0
-streamlit-folium>=0.15.0
-numpy>=1.26.0
-pandas>=2.1.0
-seaborn>=0.13.0
-opencv-python>=4.9.0
-scikit-learn>=1.4.0
-matplotlib>=3.8.0
-plotly>=5.17.0
-scipy>=1.12.0
-scikit-image>=0.22.0
+streamlit
+streamlit-ace
+pymongo
+python-dotenv
+Pillow
+requests
+piexif
+folium
+streamlit-folium
+numpy
+pandas
+seaborn
+opencv-python
+scikit-learn
+matplotlib
+plotly
+scipy
+scikit-image
